# localwriter-experemental

./: .gitignore  GUIDE.md  llm_context.md  notes.md  task_project.md
backend/: README.md  check_db.py  pyproject.toml  run_integration_suite.sh
backend/app/: config.py  main.py
backend/app/api/: __init__.py  endpoints.py
backend/app/services/: calibration.py  docling_parser.py  llm_checker.py  ollama_client.py  rag_engine.py  style_extractor.py
backend/tests/: benchmark_rag.py  test_config.json  test_corner_cases.py  test_formatting_quality.py  test_hybrid_pipeline.py  visualize_pdf.py  workflow_validator.py  xml_docx_styles.py
extension/: Accelerators.xcu  Addons.xcu  client.py  description.xml  localwriter.oxt  main.py  tracer.py  uno_formatter.py
scripts/: deploy.sh
